--- a/index.html
+++ b/index.html
@@ -242,10 +242,15 @@
                 <div class="header-btns">
                     <a href="https://wa.me/525535757364?text=Hola,%20me%20interesa%20una%20cotización"
                         class="btn btn-whatsapp header-btn primary-tel" target="_blank">
-                        <i class="fab fa-whatsapp"></i> <span class="btn-text">Cotiza Ahora</span>
+                        <i class="fab fa-whatsapp"></i> <span class="btn-text">Duran</span>
+                    </a>
+                    <a href="https://wa.me/525522917267?text=Hola,%20busco%20asesoría%20con%20Erika"
+                        class="btn btn-whatsapp header-btn erika-tel" target="_blank"
+                        style="background: linear-gradient(135deg, #25d366, #128c7e);">
+                        <i class="fab fa-whatsapp"></i> <span class="btn-text">Erika</span>
                     </a>
                     <button id="openNavTicket" class="nav-ticket-btn">
-                        <i class="fas fa-ticket-alt"></i> Boleto Dorado
+                        <i class="fas fa-ticket-alt"></i> Boleto
                     </button>
                 </div>
                 <button id="langToggle" class="lang-btn" aria-label="Switch Language">
@@ -1301,6 +1306,8 @@
                         <label for="referralSource" class="ticket-label">¿Cómo nos conociste?</label>
                         <select id="referralSource" class="ticket-select">
                             <option value="G">Google Maps / Internet</option>
+                            <option value="R">Recomendación de Raul</option>
+                            <option value="E">Recomendación de Erika</option>
                             <option value="O">Recomendación de Oso</option>
                         </select>
 
@@ -1595,6 +1602,8 @@
                     <ul class="footer-links">
                         <li><a href="https://wa.me/525535757364" target="_blank" aria-label="WhatsApp 55 3575 7364"><i
                                     class="fab fa-whatsapp"></i> 55 3575 7364 - Ing Duran</a></li>
+                        <li><a href="https://wa.me/525522917267" target="_blank" aria-label="WhatsApp 55 2291 7267"><i
+                                    class="fab fa-whatsapp"></i> 55 2291 7267 - Lic Erika</a></li>
 
 
                         <li><i class="fas fa-envelope"></i> contacto@gestordeautos.com.mx</li>
