--- a/index.html
+++ b/index.html
@@ -242,12 +242,20 @@
                 <div class="header-btns">
                     <a href="https://wa.me/525535757364?text=Hola,%20me%20interesa%20una%20cotización"
                         class="btn btn-whatsapp header-btn primary-tel" target="_blank">
-                        <i class="fab fa-whatsapp"></i> <span class="btn-text">Duran</span>
+                        <i class="fab fa-whatsapp"></i>
+                        <span class="btn-text">
+                            <span class="text-default">WhatsApp</span>
+                            <span class="text-hover">Duran</span>
+                        </span>
                     </a>
                     <a href="https://wa.me/525522917267?text=Hola,%20busco%20asesoría%20con%20Erika"
                         class="btn btn-whatsapp header-btn erika-tel" target="_blank"
                         style="background: linear-gradient(135deg, #25d366, #128c7e);">
-                        <i class="fab fa-whatsapp"></i> <span class="btn-text">Erika</span>
+                        <i class="fab fa-whatsapp"></i>
+                        <span class="btn-text">
+                            <span class="text-default">WhatsApp</span>
+                            <span class="text-hover">Erika</span>
+                        </span>
                     </a>
                     <button id="openNavTicket" class="nav-ticket-btn">
                         <i class="fas fa-ticket-alt"></i> Boleto
