--- a/index.html
+++ b/index.html
@@ -244,7 +244,7 @@
                         class="btn btn-whatsapp header-btn primary-tel" target="_blank">
                         <i class="fab fa-whatsapp"></i>
                         <span class="btn-text">
-                            <span class="text-default">WhatsApp</span>
+                            <span class="text-default">Cotizaciones 1</span>
                             <span class="text-hover">Duran</span>
                         </span>
                     </a>
@@ -253,7 +253,7 @@
                         style="background: linear-gradient(135deg, #25d366, #128c7e);">
                         <i class="fab fa-whatsapp"></i>
                         <span class="btn-text">
-                            <span class="text-default">WhatsApp</span>
+                            <span class="text-default">Cotizaciones 2</span>
                             <span class="text-hover">Erika</span>
                         </span>
                     </a>
