--- a/index.html
+++ b/index.html
@@ -245,7 +245,7 @@
                         <i class="fab fa-whatsapp"></i>
                         <span class="btn-text">
                             <span class="text-default">Cotizaciones 1</span>
-                            <span class="text-hover">Duran</span>
+                            <span class="text-hover">DURAN</span>
                         </span>
                     </a>
                     <a href="https://wa.me/525522917267?text=Hola,%20busco%20asesoría%20con%20Erika"
@@ -254,7 +254,7 @@
                         <i class="fab fa-whatsapp"></i>
                         <span class="btn-text">
                             <span class="text-default">Cotizaciones 2</span>
-                            <span class="text-hover">Erika</span>
+                            <span class="text-hover">ERIKA</span>
                         </span>
                     </a>
                     <button id="openNavTicket" class="nav-ticket-btn">
