--- a/index.html
+++ b/index.html
@@ -240,11 +240,14 @@
             </ul>
             <div class="header-contacts">
                 <div class="header-btns">
+                    <button id="openNavTicket" class="nav-ticket-btn">
+                        <i class="fas fa-ticket-alt"></i> BOLETO DORADO
+                    </button>
                     <a href="https://wa.me/525535757364?text=Hola,%20me%20interesa%20una%20cotización"
                         class="btn btn-whatsapp header-btn primary-tel" target="_blank">
                         <i class="fab fa-whatsapp"></i>
                         <span class="btn-text">
-                            <span class="text-default">Cotizaciones 1</span>
+                            <span class="text-default">COTIZACIONES 1</span>
                             <span class="text-hover">DURAN</span>
                         </span>
                     </a>
@@ -253,13 +256,10 @@
                         style="background: linear-gradient(135deg, #25d366, #128c7e);">
                         <i class="fab fa-whatsapp"></i>
                         <span class="btn-text">
-                            <span class="text-default">Cotizaciones 2</span>
+                            <span class="text-default">COTIZACIONES 2</span>
                             <span class="text-hover">ERIKA</span>
                         </span>
                     </a>
-                    <button id="openNavTicket" class="nav-ticket-btn">
-                        <i class="fas fa-ticket-alt"></i> Boleto
-                    </button>
                 </div>
                 <button id="langToggle" class="lang-btn" aria-label="Switch Language">
                     ES
