--- a/index.html
+++ b/index.html
@@ -226,18 +226,20 @@
                         height="50" fetchpriority="high">
                 </div>
                 <div class="logo-text">
-                    <div class="site-title">Gestor de <span>Autos</span></div>
+                    <div class="site-title">Gestor de Autos</div>
                 </div>
             </a>
             <ul class="nav-links">
                 <li><a href="#servicios" data-i18n="nav_services">Servicios</a></li>
                 <li><a href="#contacto" data-i18n="nav_contact">Contacto</a></li>
-            </ul>
-            <div class="header-contacts">
-                <div class="header-btns">
+                <li>
                     <button id="openNavTicket" class="nav-ticket-btn">
                         <i class="fas fa-ticket-alt"></i> BOLETO DORADO
                     </button>
+                </li>
+            </ul>
+            <div class="header-contacts">
+                <div class="header-btns">
                     <a href="https://wa.me/525535757364?text=Hola,%20me%20interesa%20una%20cotización"
                         class="btn btn-whatsapp header-btn primary-tel" target="_blank">
                         <i class="fab fa-whatsapp"></i>
@@ -1309,9 +1311,8 @@
                         <label for="referralSource" class="ticket-label">¿Cómo nos conociste?</label>
                         <select id="referralSource" class="ticket-select">
                             <option value="G">Google Maps / Internet</option>
-                            <option value="R">Recomendación de Raul</option>
                             <option value="E">Recomendación de Erika</option>
-                            <option value="O">Recomendación de Oso</option>
+                            <option value="O">Recomendación de OSO</option>
                         </select>
 
                         <input type="text" id="ticketVisitorName" class="ticket-input"
