--- a/index.html
+++ b/index.html
@@ -226,7 +226,7 @@
                         height="50" fetchpriority="high">
                 </div>
                 <div class="logo-text">
-                    <div class="site-title">Gestor de Autos</div>
+                    <div class="site-title">Gestor de <span>Autos</span></div>
                 </div>
             </a>
             <ul class="nav-links">
