--- a/index.html
+++ b/index.html
@@ -16,11 +16,11 @@
 
         gtag('config', 'G-BNJCSQXF11');
     </script>
-    <title>Gestoría Vehicular CDMX y EdoMex #1 | Placas, Licencias y Altas | Gestor de Autos</title>
+    <title>GESTORÍA VEHICULAR CDMX y EdoMex #1 2026 | Placas, Licencias, Altas y Bajas | Gestor de Autos</title>
     <meta name="description"
-        content="La mejor gestoría vehicular en CDMX y Estado de México. Expertos en alta de placas, licencias, cambios de propietario y regularización en Chalco, Ixtapaluca, Huixquilucan, Interlomas y Cuautitlán. Trámites 100% online y seguros.">
+        content="La mejor gestoría vehicular en CDMX y Estado de México. Expertos en alta de placas, licencias, reemplacamiento 2026, cambios de propietario y regularización en Chalco, Ixtapaluca, Huixquilucan, Interlomas y Cuautitlán. Servicio 100% online.">
     <meta name="keywords"
-        content="gestoría vehicular cdmx, gestoria vehicular estado de mexico, placas edomex, tramites vehiculares chalco, gestoria vehicular ixtapaluca, placas huixquilucan, licencias de conducir edomex, cambio de propietario estado de mexico, tramites vehiculares interlomas, gestoria vehicular tlalnepantla, ecatepec, cuautitlan izcalli, gestor de autos">
+        content="gestoría vehicular cdmx, gestoria vehicular estado de mexico, placas edomex, tramites vehiculares chalco, gestoria vehicular ixtapaluca, placas huixquilucan, licencias de conducir edomex, cambio de propietario estado de mexico, tramites vehiculares interlomas, gestoria vehicular tlalnepantla, ecatepec, cuautitlan izcalli, reemplacamiento edomex 2026, gestor de autos, alta vehicular cdmx, baja vehicular, permiso provisional para circular">
     <link rel="canonical" href="https://gestordeautos.com.mx/">
     <meta name="robots" content="index, follow, max-image-preview:large, max-snippet:-1, max-video-preview:-1">
 
@@ -108,7 +108,8 @@
           "areaServed": [
             "Ciudad de México", "Estado de México", "Morelos", "Huixquilucan", "Interlomas", 
             "Chalco", "Ixtapaluca", "Tlalnepantla", "Ecatepec", "Chapa de Mota",
-            "Texcoco", "Chimalhuacán", "Valle de Chalco", "La Paz", "Coacalco", "Cuautitlán Izcalli"
+            "Texcoco", "Chimalhuacán", "Valle de Chalco", "La Paz", "Coacalco", "Cuautitlán Izcalli",
+            "Naucalpan de Juárez", "Atizapán de Zaragoza", "Metepec", "Toluca", "Cuernavaca", "Pachuca"
           ],
           "priceRange": "$$",
           "aggregateRating": {
@@ -160,7 +161,23 @@
               "name": "¿Qué placas del Estado de México deben reemplacarse en 2026?",
               "acceptedAnswer": {
                 "@type": "Answer",
-                "text": "Todas las placas expedidas en 2021 o años anteriores. El reemplacamiento 2026 es obligatorio para evitar multas y corralón."
+                "text": "Todas las placas expedidas en 2021 o años anteriores deben renovarse. El reemplacamiento 2026 en Edomex es obligatorio para evitar multas de tránsito y el envío al depósito vehicular (corralón)."
+              }
+            },
+            {
+              "@type": "Question",
+              "name": "¿Cuál es el mejor gestor vehicular en Interlomas y Huixquilucan?",
+              "acceptedAnswer": {
+                "@type": "Answer",
+                "text": "Gestor de Autos es el servicio líder en Interlomas, ofreciendo gestoría vehicular a domicilio con máxima seguridad y rapidez para alta de placas de lujo y licencias."
+              }
+            },
+            {
+              "@type": "Question",
+              "name": "¿Se puede tramitar un permiso provisional para circular sin placas?",
+              "acceptedAnswer": {
+                "@type": "Answer",
+                "text": "Sí, gestionamos permisos provisionales de 30 días válidos en toda la República Mexicana. Ideal para autos nuevos o vehículos en proceso de emplacamiento foráneo."
               }
             }
           ]
@@ -278,7 +295,7 @@
                         <span
                             style="font-weight: 600; color: #e2e8f0; font-size: 0.6em; display: block; margin-top: 0.5rem; letter-spacing: 1px; text-transform: uppercase;"
                             data-i18n="hero_title_sub">
-                            Chalco · Ixtapaluca · Huixquilucan · Interlomas · Naucalpan
+                            Chalco · Ixtapaluca · Huixquilucan · Interlomas · Naucalpan · Tlalnepantla · Ecatepec
                         </span>
                         <span
                             style="font-family: 'Yellowtail', cursive; font-size: 1.5em; color: #fbbf24; text-shadow: 2px 2px 0 #000; display: block; margin-top: 1rem;">
@@ -439,7 +456,7 @@
                             <div class="service-header">
                                 <div class="service-icon"><i class="fas fa-car-side"></i></div>
                                 <div>
-                                    <h4>Alta de Placas (EdoMex y CDMX)</h4>
+                                    <h4>Alta de Placas (EdoMex y CDMX) - Gestoría Vehicular #1</h4>
                                     <small>Todas las clasificaciones</small>
                                 </div>
                             </div>
@@ -510,7 +527,7 @@
                             <div class="service-header">
                                 <div class="service-icon"><i class="fas fa-id-card"></i></div>
                                 <div>
-                                    <h4>Licencias de Conducir</h4>
+                                    <h4>Licencias de Conducir EdoMex y CDMX</h4>
                                     <small>Todos los tipos y clasificaciones</small>
                                 </div>
                             </div>
@@ -609,7 +626,7 @@
                             <div class="service-header">
                                 <div class="service-icon"><i class="fas fa-passport"></i></div>
                                 <div>
-                                    <h4 data-i18n="svc_foreign_lic_title">Licencia para Extranjeros</h4>
+                                    <h4 data-i18n="svc_foreign_lic_title">Licencia para Extranjeros en México</h4>
                                     <small data-i18n="svc_foreign_lic_sub">Driver's License for Foreigners</small>
                                 </div>
                             </div>
@@ -631,7 +648,7 @@
                             <div class="service-header">
                                 <div class="service-icon"><i class="fas fa-car-side"></i></div>
                                 <div>
-                                    <h4 data-i18n="svc_foreign_plates_title">Placas para Extranjeros</h4>
+                                    <h4 data-i18n="svc_foreign_plates_title">Placas para Extranjeros y Residentes</h4>
                                     <small data-i18n="svc_foreign_plates_sub">Vehicle Registration</small>
                                 </div>
                             </div>
