--- a/index.html
+++ b/index.html
@@ -249,14 +249,12 @@
             <ul class="nav-links">
                 <li><a href="#servicios" data-i18n="nav_services">Servicios</a></li>
                 <li><a href="#contacto" data-i18n="nav_contact">Contacto</a></li>
-                <li>
-                    <button id="openNavTicket" class="nav-ticket-btn">
-                        <i class="fas fa-ticket-alt"></i> BOLETO DORADO
-                    </button>
-                </li>
             </ul>
             <div class="header-contacts">
                 <div class="header-btns">
+                    <button id="openNavTicket" class="nav-ticket-btn">
+                        <i class="fas fa-ticket-alt"></i> BOLETO DORADO
+                    </button>
                     <a href="https://wa.me/525535757364?text=Hola,%20me%20interesa%20una%20cotización"
                         class="btn btn-whatsapp header-btn primary-tel" target="_blank">
                         <i class="fab fa-whatsapp"></i>
@@ -1327,9 +1325,9 @@
 
                         <label for="referralSource" class="ticket-label">¿Cómo nos conociste?</label>
                         <select id="referralSource" class="ticket-select">
-                            <option value="G">Google Maps / Internet</option>
-                            <option value="E">Recomendación de Erika</option>
-                            <option value="O">Recomendación de OSO</option>
+                            <option value="G">GOOGLE MAPS / INTERNET</option>
+                            <option value="E">RECOMENDACIÓN DE ERIKA</option>
+                            <option value="O">RECOMENDACIÓN DE OSO</option>
                         </select>
 
                         <input type="text" id="ticketVisitorName" class="ticket-input"
