--- a/index.html
+++ b/index.html
@@ -239,8 +239,8 @@
             <a href="#" class="logo">
                 <div class="logo-container">
                     <img decoding="async" src="assets/images/logo.jpg"
-                        alt="Logo de Gestor de Autos - Trámites Vehiculares EdoMex" class="logo-img" width="50"
-                        height="50" fetchpriority="high">
+                        alt="Logo de Gestor de Autos - Trámites Vehiculares EdoMex" class="logo-img"
+                        fetchpriority="high">
                 </div>
                 <div class="logo-text">
                     <div class="site-title">Gestor de <span>Autos</span></div>
