--- a/index.html
+++ b/index.html
@@ -16,11 +16,12 @@
 
         gtag('config', 'G-BNJCSQXF11');
     </script>
-    <title>GESTORÍA VEHICULAR CDMX y EdoMex #1 2026 | Placas, Licencias, Altas y Bajas | Gestor de Autos</title>
+    <title>GESTORÍA VEHICULAR CDMX, EdoMex y Morelos #1 2026 | Refrendo Morelos | Placas, Licencias | Gestor de Autos
+    </title>
     <meta name="description"
-        content="La mejor gestoría vehicular en CDMX y Estado de México. Expertos en alta de placas, licencias, reemplacamiento 2026, cambios de propietario y regularización en Chalco, Ixtapaluca, Huixquilucan, Interlomas y Cuautitlán. Servicio 100% online.">
+        content="Gestoría vehicular en CDMX, Estado de México y Morelos. Refrendo vehicular Morelos 2026 desde $300. Expertos en alta de placas, licencias, reemplacamiento 2026, cambios de propietario. Servicio 100% online.">
     <meta name="keywords"
-        content="gestoría vehicular cdmx, gestoria vehicular estado de mexico, placas edomex, tramites vehiculares chalco, gestoria vehicular ixtapaluca, placas huixquilucan, licencias de conducir edomex, cambio de propietario estado de mexico, tramites vehiculares interlomas, gestoria vehicular tlalnepantla, ecatepec, cuautitlan izcalli, reemplacamiento edomex 2026, gestor de autos, alta vehicular cdmx, baja vehicular, permiso provisional para circular">
+        content="refrendo morelos 2026, costo refrendo morelos 2026, pagar refrendo morelos en línea, refrendo vehicular morelos, requisitos refrendo morelos, trámite refrendo morelos, refrendo tarjeta circulación morelos, tenencia morelos 2026, gestoría vehicular cdmx, gestoria vehicular estado de mexico, placas edomex, tramites vehiculares chalco, gestoria vehicular ixtapaluca, placas huixquilucan, licencias de conducir edomex, cambio de propietario estado de mexico, tramites vehiculares interlomas, gestoria vehicular tlalnepantla, ecatepec, cuautitlan izcalli, reemplacamiento edomex 2026, gestor de autos, alta vehicular cdmx, baja vehicular, permiso provisional para circular">
     <link rel="canonical" href="https://gestordeautos.com.mx/">
     <meta name="robots" content="index, follow, max-image-preview:large, max-snippet:-1, max-video-preview:-1">
 
@@ -210,6 +211,35 @@
           "item": "https://gestordeautos.com.mx/#contacto"
         }
       ]
+    }
+    </script>
+    <!-- Refrendo Morelos Service Schema -->
+    <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "Service",
+      "serviceType": "Refrendo Vehicular Morelos",
+      "name": "Refrendo Vehicular Morelos 2026",
+      "description": "Servicio de gestoría para refrendo vehicular en Morelos. Tramitamos tu refrendo 100% en línea en menos de 24 horas.",
+      "provider": {
+        "@id": "https://gestordeautos.com.mx/#organization"
+      },
+      "areaServed": {
+        "@type": "State",
+        "name": "Morelos",
+        "address": {
+          "@type": "PostalAddress",
+          "addressRegion": "Morelos",
+          "addressCountry": "MX"
+        }
+      },
+      "offers": {
+        "@type": "Offer",
+        "price": "300",
+        "priceCurrency": "MXN",
+        "description": "Servicio de gestoría para refrendo vehicular Morelos 2026. Costo oficial $1,170.57 + nuestro servicio desde $300",
+        "availability": "https://schema.org/InStock"
+      }
     }
     </script>
     <!-- Fonts -->
@@ -721,6 +751,74 @@
             </div>
         </section>
 
+
+        <!-- Refrendo Morelos 2026 Section -->
+        <section id="refrendo-morelos" class="section-padding"
+            style="background: linear-gradient(135deg, #f8fafc 0%, #e2e8f0 100%);">
+            <div class="container">
+                <div class="section-title">
+                    <h2>Refrendo Vehicular Morelos 2026</h2>
+                    <p>Tramitamos tu refrendo de Morelos 100% en línea - Rápido, Seguro y Garantizado</p>
+                </div>
+
+                <div class="refrendo-info">
+                    <div class="refrendo-card">
+                        <div class="service-icon"
+                            style="background: linear-gradient(135deg, #2563eb, #1d4ed8); color: white; width: 60px; height: 60px; border-radius: 50%; display: flex; align-items: center; justify-content: center; margin-bottom: 1rem;">
+                            <i class="fas fa-info-circle" style="font-size: 1.5rem;"></i>
+                        </div>
+                        <h3>¿Qué es el Refrendo Morelos?</h3>
+                        <p>El refrendo anual de la tarjeta de circulación en Morelos es un trámite obligatorio que se
+                            realiza 100% en línea. Nosotros lo hacemos por ti en menos de 24 horas.</p>
+                        <p><strong>Portal oficial:</strong> digital.morelos.gob.mx</p>
+                    </div>
+
+                    <div class="refrendo-card" style="border: 2px solid #2563eb;">
+                        <div class="service-icon"
+                            style="background: linear-gradient(135deg, #fbbf24, #f59e0b); color: #1a1a1a; width: 60px; height: 60px; border-radius: 50%; display: flex; align-items: center; justify-content: center; margin-bottom: 1rem;">
+                            <i class="fas fa-dollar-sign" style="font-size: 1.5rem;"></i>
+                        </div>
+                        <h3>Costo Refrendo Morelos 2026</h3>
+                        <p style="font-size: 1.1rem; margin: 1rem 0;"><strong style="color: #2563eb;">Costo
+                                oficial:</strong> $1,170.57 MXN</p>
+                        <p style="font-size: 1.2rem; margin: 1rem 0;"><strong style="color: #25d366;">Nuestro
+                                servicio:</strong> Desde $300 MXN</p>
+                        <p style="font-size: 0.9rem; color: #64748b;">Hacemos todo el trámite por ti. Tú solo envías
+                            documentos por WhatsApp.</p>
+                    </div>
+
+                    <div class="refrendo-card">
+                        <div class="service-icon"
+                            style="background: linear-gradient(135deg, #25d366, #128c7e); color: white; width: 60px; height: 60px; border-radius: 50%; display: flex; align-items: center; justify-content: center; margin-bottom: 1rem;">
+                            <i class="fas fa-clipboard-list" style="font-size: 1.5rem;"></i>
+                        </div>
+                        <h3>Requisitos Refrendo Morelos</h3>
+                        <ul style="list-style: none; padding: 0; margin-top: 1rem;">
+                            <li style="padding: 0.5rem 0; border-bottom: 1px solid #e2e8f0;"><i
+                                    class="fas fa-check-circle" style="color: #25d366; margin-right: 0.5rem;"></i> INE
+                                vigente (foto frontal y trasera)</li>
+                            <li style="padding: 0.5rem 0; border-bottom: 1px solid #e2e8f0;"><i
+                                    class="fas fa-check-circle" style="color: #25d366; margin-right: 0.5rem;"></i>
+                                Número de placas del vehículo</li>
+                            <li style="padding: 0.5rem 0; border-bottom: 1px solid #e2e8f0;"><i
+                                    class="fas fa-check-circle" style="color: #25d366; margin-right: 0.5rem;"></i>
+                                Últimos 5 dígitos del número de serie</li>
+                            <li style="padding: 0.5rem 0;"><i class="fas fa-check-circle"
+                                    style="color: #25d366; margin-right: 0.5rem;"></i> Póliza de seguro vigente
+                                (opcional)</li>
+                        </ul>
+                    </div>
+                </div>
+
+                <div style="text-align: center; margin-top: 3rem;">
+                    <a href="https://wa.me/525535757364?text=Hola,%20necesito%20ayuda%20con%20el%20refrendo%20de%20Morelos%202026"
+                        class="btn btn-whatsapp" style="font-size: 1.2rem; padding: 1rem 2rem;">
+                        <i class="fab fa-whatsapp"></i> Tramitar Refrendo Morelos Ahora
+                    </a>
+                </div>
+            </div>
+        </section>
+
         <!-- SEO Content Expansion: Coverage & FAQ -->
         <section class="section-padding seo-content">
             <div class="container">
@@ -791,6 +889,26 @@
                             <h3>¿Es seguro enviar mis documentos por WhatsApp?</h3>
                             <p>Absolutamente. En <strong>Gestor de Autos</strong> manejamos tu información con estricta
                                 confidencialidad. Somos profesionales con cientos de casos de éxito verificables.</p>
+                        </div>
+                        <div class="faq-item">
+                            <h3>¿Cuánto cuesta el refrendo en Morelos 2026?</h3>
+                            <p>El <strong>costo oficial del refrendo vehicular Morelos 2026</strong> es de $1,170.57
+                                MXN. Nosotros te ayudamos con el trámite completo por <strong>$300-500 MXN
+                                    adicionales</strong>, haciendo todo el proceso en línea por ti en menos de 24 horas.
+                            </p>
+                        </div>
+                        <div class="faq-item">
+                            <h3>¿Cómo pagar el refrendo de Morelos en línea?</h3>
+                            <p>Puedes <strong>pagar el refrendo Morelos en línea</strong> a través del portal
+                                digital.morelos.gob.mx. Sin embargo, nosotros hacemos todo el trámite por ti: solo
+                                envías tu INE y datos del vehículo por WhatsApp, y nosotros nos encargamos del resto.
+                            </p>
+                        </div>
+                        <div class="faq-item">
+                            <h3>¿Qué requisitos necesito para el refrendo Morelos?</h3>
+                            <p>Los <strong>requisitos para el refrendo Morelos</strong> son: INE vigente (frontal y
+                                trasera), número de placas, últimos 5 dígitos del número de serie, y póliza de seguro
+                                (opcional). Nosotros validamos tus documentos antes de procesar.</p>
                         </div>
                     </div>
                 </div>
