--- a/index.html
+++ b/index.html
@@ -773,7 +773,7 @@
                         <p><strong>Portal oficial:</strong> digital.morelos.gob.mx</p>
                     </div>
 
-                    <div class="refrendo-card" style="border: 2px solid #2563eb;">
+                    <div class="refrendo-card">
                         <div class="service-icon"
                             style="background: linear-gradient(135deg, #fbbf24, #f59e0b); color: #1a1a1a; width: 60px; height: 60px; border-radius: 50%; display: flex; align-items: center; justify-content: center; margin-bottom: 1rem;">
                             <i class="fas fa-dollar-sign" style="font-size: 1.5rem;"></i>
@@ -793,7 +793,7 @@
                             <i class="fas fa-clipboard-list" style="font-size: 1.5rem;"></i>
                         </div>
                         <h3>Requisitos Refrendo Morelos</h3>
-                        <ul style="list-style: none; padding: 0; margin-top: 1rem;">
+                        <ul style="list-style: none; padding: 0; margin-top: 1rem; width: 100%; text-align: left;">
                             <li style="padding: 0.5rem 0; border-bottom: 1px solid #e2e8f0;"><i
                                     class="fas fa-check-circle" style="color: #25d366; margin-right: 0.5rem;"></i> INE
                                 vigente (foto frontal y trasera)</li>
