--- a/index.html
+++ b/index.html
@@ -770,7 +770,7 @@
                         <h3>¿Qué es el Refrendo Morelos?</h3>
                         <p>El refrendo anual de la tarjeta de circulación en Morelos es un trámite obligatorio que se
                             realiza 100% en línea. Nosotros lo hacemos por ti en menos de 24 horas.</p>
-                        <p><strong>Portal oficial:</strong> digital.morelos.gob.mx</p>
+
                     </div>
 
                     <div class="refrendo-card">
@@ -805,7 +805,7 @@
                                 Últimos 5 dígitos del número de serie</li>
                             <li style="padding: 0.5rem 0;"><i class="fas fa-check-circle"
                                     style="color: #25d366; margin-right: 0.5rem;"></i> Póliza de seguro vigente
-                                (opcional)</li>
+                                (obligatorio)</li>
                         </ul>
                     </div>
                 </div>
